src/app.css
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&family=Montserrat:ital@0;1&display=swap");
@import url("https://fonts.googleapis.com/css2?family=IM+Fell+Double+Pica:ital@1&display=swap");
@import url("https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer:ital@0;1&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@200;300;400&display=swap");

* {
  font-family: "Manrope", "IM Fell Double Pica" sans-serif;
  margin: auto;
}
body {
  color: rgba(2, 2, 2, 0.9);
  font-family: "Unbounded", sans-serif;
}
.nav-desktop {
  display: none;
}
.map-1 {
  display: none;
}
.map-2 {
  display: flex;
  /* justify-content: center; */
}
.hamburger {
  /* display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: space-between;
  padding: 20px;
  text-align: center;
  margin-left: 10px;
  width: 100%; */
}

.mobile-menu {
  /* display: flex;
  flex-direction: column; */
  position: absolute;
  padding: 0.5rem;
  right: 0;
  top: 2.5rem;
  width: 50%;
  background-color: #03561ee6;
  /* z-index: 0; */
  opacity: 0;
}
.page-burger-open {
  opacity: 1;
  transition: all 390ms ease-in-out;
  z-index: 1;
}
.navbar {
  /* display: flex; */
  color: #adadc2;
  top: 0;
  /* z-index: 0; */
  justify-content: flex-start;
  background-color: #00084ceb;
  height: 3rem;
  width: 100%;
  position: fixed;
}
.nav-link,
.nav-link-active {
  display: none;
}
.ham-link-active {
  color: #8f76c2;
  font-weight: 500;
}
.ham-link,
.foot-link {
  padding: 2px;
  margin-bottom: 10px;
  font-size: 20px;
  font-weight: 600;
  text-transform: lowercase;
  transition: 300ms;
  cursor: pointer;
}
.ham-link:hover,
.foot-link:hover {
  font-size: 1rem;
  text-shadow: rgba(2, 90, 32, 0.86);
  color: rgb(1, 40, 8);
}
.ham-link:after {
  transform: scaleY(1);
  opacity: 1;
}
.title-header {
  width: 500px;
  margin-left: 12px;
}
.title {
  text-decoration: none;
  font-size: large;
  font-weight: 700;
  width: 500px;
}
.home-img {
  max-width: 100%;
  margin-top: 1rem;
  /* display: block; */
}
.ahu-link-container {
  display: flex;
  flex-wrap: wrap;
  width: 50%;
  padding: 3px;
}
.bio {
  padding: 0.8rem;
}
.learn-more {
  padding: 0.5rem;
}
.moku-text {
  padding: 2rem;
  width: 100%;
}
.moku-pic {
  max-width: 70%;
}
.moku-map {
  padding-left: 4rem;
}
.moku-container,
.ahu-elements {
  padding-top: 8rem;
}
h1,
h2 {
  display: block;
  letter-spacing: 0.2rem;
  /* font-size: 27px; */
  display: flex;
  /* font-family: "IM Fell Double Pica", "sans-serif"; */
}
h2 {
  padding: 0.5rem;
}
.video,
.reports {
  /* padding: 0.5rem; */
  display: flex;
  flex-direction: column;
}
.ahu-text {
  font-size: larger;
  padding: 1.5rem;
}
.ahu-sign {
  padding: 1rem;
}
.moku-sign {
  width: 80%;
}
.moku-link-container {
  display: flex;
}

/* 1 tablet */
@media screen and (max-width: 768px) {
  .nav-desktop {
    display: none;
  }
  .map-2 {
    display: none;
  }
  .mobile-menu {
    display: flex;
    flex-direction: column;
    /* position: absolute; */
    padding: 0.5rem;
    right: 0;
    top: 2.5rem;
    width: 50%;
    background-color: #03561ee6;
    z-index: 0;
    opacity: 0;
  }
  .page-burger-open {
    opacity: 1;
    transition: all 390ms ease-in-out;
    /* z-index: 1; */
  }
  .navbar {
    display: flex;
    color: #060607;
    top: 0;
    /* z-index: 0; */
    justify-content: flex-start;
    background-color: #03561ee6;
    height: 3rem;
    width: 100%;
    position: fixed;
  }
  .nav-link,
  .nav-link-active {
    display: none;
  }
  .ham-link-active {
    color: #8f76c2;
    font-weight: 500;
  }
  .ham-link,
  .foot-link {
    padding: 2px;
    margin-bottom: 10px;
    font-size: 20px;
    font-weight: 600;
    text-transform: lowercase;
    transition: 300ms;
    cursor: pointer;
  }
  .ham-link:hover,
  .foot-link:hover {
    font-size: 1rem;
    text-shadow: rgba(2, 90, 32, 0.86);
    color: rgb(1, 40, 8);
  }
  .ham-link:after {
    transform: scaleY(1);
    opacity: 1;
  }
  .reports {
    display: flex;
  }
  .ahu-map-and-sign {
    display: flex;
  }
  .ahu-sign {
    max-width: 30%;
  }

  .ahu-link-container {
    display: flex;
    /* flex-wrap: wrap; */
    width: 50%;
    padding: 3px;
  }
}
@media screen and (min-width: 769px) and (max-width: 1199px) {
  .nav-desktop {
    display: none;
  }
  .map-2 {
    display: none;
  }
  .mobile-menu {
    display: flex;
    flex-direction: column;
    /* position: absolute; */
    padding: 0.5rem;
    right: 0;
    top: 2.5rem;
    width: 50%;
    background-color: #03561ee6;
    z-index: 0;
    opacity: 0;
  }
  .page-burger-open {
    opacity: 1;
    transition: all 390ms ease-in-out;
    /* z-index: 1; */
  }
  .navbar {
    display: flex;
    color: #060607;
    top: 0;
    /* z-index: 0; */
    justify-content: flex-start;
    background-color: #03561ee6;
    height: 3rem;
    width: 100%;
    position: fixed;
  }
  .nav-link,
  .nav-link-active {
    display: none;
  }
  .ham-link-active {
    color: #8f76c2;
    font-weight: 500;
  }
  .ham-link,
  .foot-link {
    padding: 2px;
    margin-bottom: 10px;
    font-size: 20px;
    font-weight: 600;
    text-transform: lowercase;
    transition: 300ms;
    cursor: pointer;
  }
  .ham-link:hover,
  .foot-link:hover {
    font-size: 1rem;
    text-shadow: rgba(2, 90, 32, 0.86);
    color: rgb(1, 40, 8);
  }
  .ham-link:after {
    transform: scaleY(1);
    opacity: 1;
  }
}
@media screen and (min-width: 1200px) {
  /* img {
    width: 100%;
  } */
  /* .nav-container {
    display: flex;
    top: 0;
    color: #060607;
    background-color: #03561ee6;
    height: 3rem;
    width: 100%;
  } */
  .title-header,
  .title {
    display: none;
  }

  .nav-desktop {
    display: flex;
    align-items: flex-end;
    position: fixed;
    width: 100%;
    padding: 1rem;
  }
  .nav-link {
    display: flex;
  }
  .nav-link-active {
    color: #8f76c2;
  }
  .nav-link,
  .foot-link {
    /* z-index: 1; */
    font-size: 20px;
    font-weight: 400;
    padding: 0.2rem;
    /* text-transform: lowercase; */
    cursor: pointer;
  }
  .nav-link:hover,
  .foot-link:hover {
    font-size: 1rem;
    color: #8f76c2;
    text-shadow: #f7fbf8;
  }
  .nav-link:after {
    transform: scaleY(0.2);
    opacity: 1;
  }
  .hamburger {
    display: none;
  }
  .video,
  .reports {
    display: flex;
    flex-direction: row;
    /* justify-content: space-around; */
  }
  .signature {
    width: 50%;
  }
  .ahu-map-and-sign {
    display: flex;
  }
  .ahu-sign {
    max-width: 30%;
  }
  .ahu-text,
  .moku-text {
    font-size: xx-large;
  }
  .ahu-elements {
    padding: 2.5rem;
  }
  /* .img-container {
    max-width: 40%;
  } */
  .ahu-link-container {
    display: flex;
  }

  .contact-container {
    padding: 5rem;
  }
  .weather-section {
    display: flex;
    justify-content: space-around;
  }
  .surf-report {
  }

  /* For pdf */
  .react-pdf__Page {
    margin-top: 10px;
  }
  .react-pdf__Page__textContent {
    border: 1px solid darkgrey;
    box-shadow: 5px 5px 5px 1px #ccc;
    border-radius: 5px;
  }
  button {
    margin-right: 10px;
    background: #3f51b5;
    color: white;
    border: none;
    padding: 5px 10px;
    width: 100px;
    cursor: pointer;
    box-shadow: 2px 2px 2px 1px #ccc;
  }
  .react-pdf__Page__annotations.annotationLayer {
    padding: 20px;
  }
  .react-pdf__Page__canvas {
    margin: 0 auto;
  }
  /* For all pages */
  .all-page-container {
    height: 100%;
    max-height: 500px;
    overflow: auto;
  }
}

